# tauri-plugin-lan-scanner

./: .gitignore  Cargo.toml  README.md  api.js  build.rs
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_discovered_devices.toml  is_scanning.toml
permissions/schemas/: schema.json
src/: commands.rs  lib.rs  models.rs
